log/build_2024-04-04_16-51-44/leg_dector/stderr.log
  File "/home/airlab/Desktop/project_ws/install/leg_dector/lib/python3.8/site-packages/leg_dector/leg_detection.py", line 64
    return None, None
    ^
SyntaxError: 'return' outside function

